           from other sources. Trying to translate yahoo symbols into the actual symbols is a
           waste of time. Better to separate them. The YAHOO_DIALOG has been changed to use the
           raw yahoo symbol in a YAHOO:XXXXX format now.

           Made an attempt at fixing bug # 3188945 - trouble with symbol search.

           Added a delete symbol context menu item to the chart panel. User can now select symbols
           to delete from the database.

           Added closing times to the yahoo download that match the exchange.

           Added WILDER_MA plugin.

           Last viewed chart is now saved between sessions and loaded on startup.

20110301:  Fixed transaction logic in QUOTE_DATABASE_SET. Database saves will be MUCH faster when
           doing multiple symbols.

           Added new indicators Bollinger_Bands_B and Bollinger_Bandwidth

           Added TEST plugin. Not functional yet.

20110302:  Added INTEGER_DIALOG, INDICATOR_PLOT_DELETE plugins.

20110303:  Feature request #3198213 - enable smaller bar width, see more data. The minimum bar spacing is now
           set to 3. Any smaller and OHLC bars are unrecognizable.

           Fixed bug #3198204 - enable values for tenths of a cent.

           Fixed false error message when script completes.

           Added TEST_DIALOG plugin. Not functional yet.

20110306:  Removed the INTEGER_DIALOG plugin.

           Added the INPUT_DIALOG plugin.

           Added a test script Best_MA.pl to optimize the best performing MA for a given symbol.

           Added script TestDialog.pl that displays the Test Dialog database browser.

20110307:  Refined the TEST scripts and logic to increase speed 10 fold by only saving the best
           performer and not every iteration. The hold up was the db.

           Fixed bug in YAHOO_DIALOG that did not update the list or db when a symbol is deleted
           from the db.
